Fix tooltips not showing sometimes on Actionbar

--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,7 @@ background-rotator, background-rotator > div {
     height: 100%;
     width: 58px;
     -webkit-transition: background-color .5s;
+    overflow: visible;
 }
 #actionbar:hover {
     background-color: rgb(26, 29, 31);
